src/packages/CSS/Controls/Panoramax/DSFRpanoramaxStyle.css
/* icon */
.gpf-btn-icon-panoramax::after {
    -webkit-mask: url("img/dsfr/panoramax.svg") center no-repeat;
    mask: url("img/dsfr/panoramax.svg") center no-repeat;
}

.gpf-btn-header-panoramax {
    z-index: 2;
    position: absolute;
    width: 20px;
    height: 20px;
}

.gpf-btn-icon-background {
    background-color: var(--background-default-grey);
}
.gpf-icon-color::before {
    background-color: var(--text-action-high-blue-france);
}

/* buttons: toggle hover */
[id^="GPpanoramaxToggle-"] {}
[id^="GPpanoramaxToggleInput-"] {}
[id^="GPpanoramaxToggleLabel-"] {
    color: var(--text-action-high-blue-france);
}

.pnx-toggle__label {}
.pnx-toggle__input {}
.pnx-toggle {
    background: var(--background-default-grey);
    width: 100%;
    margin-inline: auto;
    border-radius: 10px;
}

.pnx-options-panel {
    position: absolute;
    height: fit-content;
    max-height: initial;
    top: initial;
    bottom: 48px;
    left: 54px;
    width: 350px;
    background-color: var(--background-default-grey);
}

/* header */
.pnx-buttons-panel__header {
    display: flex;
    flex-direction: row;
    align-items: center;
    align-content: center;
    background: #E3E3FD;
    height: 48px;
    padding-left: 4px;
}

.pnx-buttons-panel__title {
    color: #101092;
    padding: 12px 15px;
    position: relative;
    font-size: 1rem;
    font-weight: normal;
    margin: 0;
    right: -16px;
}

.pnx-buttons-panel__body {
    background: transparent;
    overflow: initial;
}
.pnx-buttons-panel__header > .gpf-btn-icon-close {
    top: 0px;
}
.pnx-buttons-panel__content {
    display: flex;
    flex-direction: row;
}

/* panel filters */
.pnx-filters-panel {
    position: relative;
    z-index: 1001;
    background-color: var(--background-default-grey);
    border-radius: 8px;
    /* box-shadow: var(--raised-shadow); */
}
.pnx-filters-panel__title {
    color: var(--text-default-grey);
    font-weight: 700;
}
.pnx-filters-panel-buttons {
    display: flex;
    flex-direction: row;
    gap: 10px;
    justify-content: space-between;
    margin-top: 10px;
}

/* panel filters: elements */
.pnx-filters-panel__date {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    border-bottom: 1px solid var(--border-default-grey);
    margin-bottom: 10px;
    column-gap: 20px;
}
.pnx-filters-panel__date-start {
    flex: 1;
}
.pnx-filters-panel__date-end {
    flex: 1;
}
.pnx-filters-panel__type {}

.gpf-segmented__element {}
.gpf-segmented {
    width: 100%;
    align-items: center;
    justify-content: center;
}
.gpf-fieldset__element {
    flex: none;
}
.gpf-input-date {
    /* reduit le padding gauche/droite */
    padding: 0.5rem;
    box-shadow: inset 0px 0px 0px 1px var(--border-default-grey);
    background-color: var(--background-default-grey);
    color: var(--background-action-high-blue-france);
}

@supports selector(::-webkit-calendar-picker-indicator) {
  .gpf-input-date[type=date] {}
}
@supports selector(::-webkit-calendar-picker-indicator) {
  .gpf-input-date[type=date]::after {}
}

/* photo viewer */
[id^="pnx-photo-viewer-"] {
    width: 100%;
    height: 100%;
    display: block;
}
.pnx-photo-viewer-container {
    container-type: size;
    width: 100%;
    height: 100%;
    display: block;
    --font-family: "Marianne", arial, sans-serif;
}

/* espacements */
.pnx-photo-viewer-container pnx-cornered-grid::part(corner-bottom),
.pnx-photo-viewer-container pnx-cornered-grid::part(corner-bottom-left),
.pnx-photo-viewer-container pnx-cornered-grid::part(corner-bottom-right),
.pnx-photo-viewer-container pnx-cornered-grid::part(corner-top),
.pnx-photo-viewer-container pnx-cornered-grid::part(corner-top-left),
.pnx-photo-viewer-container pnx-cornered-grid::part(corner-top-right) {
    gap: 8px;
    padding: 8px;
}

/* viewer: widgets */
.pnx-photo-viewer-close-button {}
.pnx-photo-viewer-zoom-button {
    width: 48px;
}
.pnx-photo-viewer-fullscreen-button {}
.pnx-photo-viewer-back-button {}

/* panel viewer window */
.pnx-visualization-window-panel {}
.pnx-visualization-window-panel__header {
    background-color: var(--background-default-grey);
    height: 50px;
}
.pnx-visualization-window-panel__body {
    width: 100%;
    height: 100%;
    overflow: hidden;
}

/* window parent viewer : size */
.pnx-visualization-window-size-small {
    position: relative;
    width: 350px;
    height: 350px;
}
.pnx-visualization-window-size-medium {
    position: relative;
    width: 700px;
    height: 500px;
}
.pnx-visualization-window-size-large {
    position: relative;
    width: 1000px;
    height: 700px;
}
.pnx-visualization-window-size-fullscreen {
    position: fixed;
    inset: 0 !important;
    left: 0 !important;
    top: 0 !important;
    width: 100dvw !important;
    height: 100dvh !important;
    min-width: 100dvw;
    min-height: 100dvh;
    max-width: none;
    max-height: none;
    margin: 0;
    padding: 0;
    border: 0;
    border-radius: 0;
    z-index: 1000;
}
.pnx-visualization-window-size-fullscreen-map {
    position: fixed;
    top: var(--pnx-map-top, 0px) !important;
    left: var(--pnx-map-left, 0px) !important;
    width: var(--pnx-map-width, 100%) !important;
    height: var(--pnx-map-height, 100%) !important;
    min-width: unset;
    min-height: unset;
    max-width: none;
    max-height: none;
    margin: 0;
    padding: 0;
    border: 0;
    border-radius: 0;
    transform: none !important;
    z-index: 10000 !important;
}

/* buttons */

::part(btn-group) {
    width: 48px;
}
::part(btn) {
    width: 48px;
    height: 48px !important;
    flex: 0 0 48px;
    border-radius: 4px;
    color: var(--text-action-high-blue-france);
    background-color: var(--background-default-grey);
    box-shadow: inset 0 0 0 4px var(--background-default-grey), var(--raised-shadow);
    border: none;
    transition: background-color 300ms;
    --hover-tint: var(--hover);
}
::part(btn):hover {
    background-color: var(--hover-tint);
}
::part(btn):active {
    background-color: var(--background-open-blue-france);
}

.pnx-btn-svg {
    width: 24px;
    height: 24px;
}

/* popup */
.pnx-popup-content {
  bottom: 20px;
  position: relative;
  max-width: calc(100vw - 80px);
  padding: 10px;
  border-radius: 4px;
  font-size: 0.75em;
  background-color: var(--background-default-grey);
  filter: drop-shadow(var(--raised-shadow));
  -webkit-user-select: none;
  user-select: none;
}

.pnx-popup-content::before {
  content: "";
  position: absolute;
  border-top: 15px solid var(--background-default-grey);
  border-right: 14px solid transparent;
  border-left: 14px solid transparent;
  bottom: -15px;
  margin-left: -14px;
  left: 50%;
}

/* popup preview */
.pnx-preview-grid-popup,
.pnx-preview-sequence-popup,
.pnx-preview-picture-popup {
    font-size: 0.875rem;
    line-height: 1.25rem;
}
/* popup preview: mode DEBUG ! */
.pnx-preview-sequence-popup > samp,
.pnx-preview-picture-popup > samp {
    display: none;
}

.pnx-preview-picture-popup__img {
    display: block;
    width: 220px;
    height: 140px;
    max-width: 100%;
    max-height: 140px;
    margin-bottom: 5px;
    border-radius: 4px;
    object-fit: cover;
    background: var(--background-disabled-grey);
}
.pnx-preview-marker {
    display: block;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    border: 2px solid #fff;
    background-color: var(--background-action-high-blue-france);
}

/* icone minimap */
.pnx-mini-map__container .ol-overviewmap button::after {
    -webkit-mask: url("img/minimap-collapse-diagonal.svg") center no-repeat;
    mask: url("img/minimap-collapse-diagonal.svg") center no-repeat;
}

/* boutons virtual tour dans le photoviewer */
.psv-virtual-tour-link {
    background: none !important;
}

/* mobile */
@media (max-width: 576px) {
    /* position dialogs */
    .position-container-bottom-left .gpf-mobile-fullscreen > button[aria-pressed="true"] ~ dialog.pnx-visualization-window-panel {
        top: var(--pnx-map-top) !important;
        left: 0 !important;
    }
    .position-container-bottom-left .gpf-mobile-fullscreen > button[aria-pressed="true"] ~ dialog.pnx-buttons-window-panel {
        top: initial !important;
        left: 54px !important;
    }
    /* minimap ouverte */
    .pnx-photo-viewer-container--minimap-open .psv-virtual-tour-arrows {
        translate: 0 -100px;
    }
    .pnx-photo-viewer-container--minimap-open pnx-cornered-grid::part(corner-bottom-left) {
        padding: 0;
    }
    .pnx-photo-viewer-container--minimap-open pnx-cornered-grid::part(corner-bottom-right) {
        translate: -80px -150px;
    }
}

